Fix scrollbar formatting for .ui-widget-content area (applies to dictionary info box)

--- a/css/main.css
+++ b/css/main.css
@@ -1841,20 +1841,23 @@ s {
 }
 
 .scrollable::-webkit-scrollbar,
-.ui-selectmenu-menu ul::-webkit-scrollbar {
+.ui-selectmenu-menu ul::-webkit-scrollbar,
+.ui-widget-content::-webkit-scrollbar {
   width: 0.5em;
   border-width: 1px;
   border-radius: 6px;
 }
 
 .scrollable::-webkit-scrollbar-track,
-.ui-selectmenu-menu ul::-webkit-scrollbar-track {
+.ui-selectmenu-menu ul::-webkit-scrollbar-track,
+.ui-widget-content::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   border-radius: 6px;
 }
  
 .scrollable::-webkit-scrollbar-thumb,
-.ui-selectmenu-menu ul::-webkit-scrollbar-thumb {
+.ui-selectmenu-menu ul::-webkit-scrollbar-thumb,
+.ui-widget-content::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   border: 1px solid slategrey;
   border-radius: 6px;
